fixing date range, hiding settings notification and dark mode

--- a/src/CSS/Calendar.css
+++ b/src/CSS/Calendar.css
@@ -3,3 +3,7 @@
     flex-direction: column;
   }
 }
+
+.ant-picker-date-panel {
+  width: 100hw;
+}
